# plant-disease

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  exceptions.py  inference.py  main.py  models.py
api/routes/: classes.py  health.py  predict.py
configs/: baseline.json  mobilenet_v2.json
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBar.tsx  DiagnoseButton.tsx  ImagePreview.tsx  LoadingSpinner.tsx  ResultCard.tsx  TopKList.tsx  UploadZone.tsx  WarningBanner.tsx
frontend/src/hooks/: usePrediction.ts
reports/: baseline_vs_mobilenet.md  latency_stats.json  ml_results.md
reports/error_analysis/baseline/: confusion_pairs.json  per_species.csv  summary.json
reports/error_analysis/mobilenet_v2/: confusion_pairs.json  per_species.csv  summary.json
scripts/: _latency_worker.py  compare_models.py  download_dataset.py  generate_results_doc.py  inspect_dataset.py  plot_training_curves.py  predict.py  preflight.py  prepare_splits.py  smoke_test.py
src/plant_disease/: config.py  data.py  error_analysis.py  evaluate.py  inference.py  inference_engine.py  train.py  utils.py
tests/: conftest.py  test_api_classes.py  test_api_health.py  test_api_predict.py  test_data.py  test_download_auth.py  test_error_analysis.py  test_generate_results_doc.py  test_inference_engine.py  test_integration.py  test_mobilenet.py  test_module_import.py  test_predict.py  test_preflight.py  test_run_info.py  test_train_unicode.py  test_training_config.py
